# R-Type

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cMake.yml  commit_norm_check.yml
includes/Client/: SFML.hpp  functions.hpp  step.hpp  window.hpp
includes/Client/ECS/: step.hpp
includes/ECS/: step.hpp
src/Client/: Makefile  collision.cpp  createBulletFoe.cpp  createSong.cpp  event.cpp  level.cpp  main.cpp  newStrat.cpp  nextRound.cpp  printHelp.cpp  redirectFile.cpp  shipExplode.cpp  showSprite.cpp  spriteAnimation.cpp
src/Client/ECS/: addComponent.cpp  addSystem.cpp  killEntity.cpp  registerComponent.cpp
src/Client/Editor/: levelEditor.cpp  waveEditor.cpp
src/ECS/: addComponent.cpp  addSystem.cpp  killEntity.cpp  registerComponent.cpp
src/Server/: Makefile  main.cpp
